--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,8 +15,8 @@ html
         ul.navbar-nav
           li.nav-item
             a.nav-link(href='/pets/new') New Pet
-      form.form-inline(role='search', action='/search', method='post')
-            input.form-control.mr-sm-2(type='search', name='name', placeholder='Search', aria-label='Search')
+      form.form-inline(action='/search')
+            input.form-control.mr-sm-2(type='search', name='term', placeholder='Search', aria-label='Search')
             button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
 
     .container
