--- a/views/pets-edit.pug
+++ b/views/pets-edit.pug
@@ -2,29 +2,32 @@ extends layout
 
 block content
 
-    .row.justify-content-center
-        .col-sm-6
-            legend New Pet
-            form(action=`/pets/${pet._id}?_method=PUT`, method="POST")
-              .form-group
-                  label Name*
-                  input.form-control(name="name" required)
-              .form-group
-                  label Birthday*
-                  input.form-control(name="birthday" required)
-              .form-group
-                  label Species*
-                  input.form-control(name="species" required)
-              .form-group
-                  label Avatar
-                  input.form-control(name="avatar" type="file" value=pet.picUrl)
-              .form-group
-                  label Favorite Food*
-                  input.form-control(name="favoriteFood" required)
-              .form-group
-                  label Description*
-                  textarea.form-control(name="description" required minlength="140")
-                button(type="submit").btn.btn-primary Save
-            .text-right
-                form(action=`/pets/${pet._id}?_method=DELETE`, method="POST")
-                    button(type="submit").btn.btn-danger Remove
+  .row.justify-content-center
+    .col-sm-6
+      legend New Pet
+      form(action=`/pets/${pet._id}?_method=PUT`, method="POST")
+        .form-group
+            label Name*
+            input.form-control(name="name" required)
+        .form-group
+            label Price*
+            textarea.form-control(name="price" required type="number")
+        .form-group
+            label Birthday*
+            input.form-control(name="birthday" required)
+        .form-group
+            label Species*
+            input.form-control(name="species" required)
+        .form-group
+            label Avatar
+            input.form-control(name="avatar" type="file" value=pet.picUrl)
+        .form-group
+            label Favorite Food*
+            input.form-control(name="favoriteFood" required)
+        .form-group
+            label Description*
+            textarea.form-control(name="description" required minlength="140")
+            button(type="submit").btn.btn-primary Save
+        .text-right
+            form(action=`/pets/${pet._id}?_method=DELETE`, method="POST")
+            button(type="submit").btn.btn-danger Remove
