--- a/views/pets-new.pug
+++ b/views/pets-new.pug
@@ -10,6 +10,9 @@ block content
             label Name*
             input.form-control(name="name")
         .form-group
+            label Price*
+            input.form-control(name="price" required type="number")
+        .form-group
             label Birthday*
             input.form-control(name="birthday")
         .form-group
@@ -23,5 +26,5 @@ block content
             input.form-control(name="favoriteFood")
         .form-group
             label Description*
-            textarea.form-control(name="description" minlength="20")
+            textarea.form-control(name="description" minlength="140")
         button(type="submit").btn.btn-primary Save
